data/issues_nolabel/nolabel_test_9771.txt
building error, tensorflow master, with bazel 0.4.5, Cuda 8.0, Cudnn 6, Nvidia p100 pci, Ubuntu 16.04

OS Platform and Distribution (e.g., Linux Ubuntu 16.04): 16.04
TensorFlow installed from (source or binary): source
TensorFlow version (use command below):   ('v1.1.0-rc2-221-g48d9915', '1.1.0-rc2')
Bazel version (if compiling from source): 0.4.5
CUDA/cuDNN version: 8.0/6
GPU model and memory: P100 PCI - 16 GB
Exact command to reproduce:
bazel build --config=opt --config=cuda //tensorflow/tools/pip_package:build_pip_package

python -c "import tensorflow as tf; print(tf.GIT_VERSION, tf.VERSION)"
./tensorflow/core/util/tensor_format.h(58): warning: missing return statement at end of non-void function "tensorflow::GetTensorFeatureDimIndex"
./tensorflow/core/util/tensor_format.h(71): warning: missing return statement at end of non-void function "tensorflow::GetTensorSpatialDimIndex"
ERROR: /root/tensorflow/tensorflow/contrib/verbs/BUILD:135:1: C++ compilation of rule '//tensorflow/contrib/verbs:rdma' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command external/local_config_cuda/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter ... (remaining 151 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/contrib/verbs/rdma.cc: In member function 'virtual void tensorflow::RdmaTensorBuffer::SendNextItem()':
tensorflow/contrib/verbs/rdma.cc:785:11: error: 'struct tensorflow::WorkerSession' has no member named 'rendezvous_mgr'
->rendezvous_mgr->RecvLocalAsync(step_id, parsed, cb);
^
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 252.968s, Critical Path: 205.52s
Thanks